--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <!--hero-->
       <section class="hero">
         <div class="container">
-          <h1>
+          <h1 class="hero-title">
             Эффективные решения<br />
             для вашего бизнеса
           </h1>
